--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -13,7 +13,7 @@ body {
     width: 100%;
     text-align: center;
     /**background: url('http://placehold.it/1900x500') no-repeat center center scroll;*/
-    background: url("imag05.png") no-repeat center center scroll;
+    background: url("img/imag05.png") no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
